--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
       <nav>
         <ul>
           <li class="active">
-            <i class="fas fa-home"></i>
-            <p>Home</p>
+            <i class="fas fa-caret-up"></i>
+            <p>Render 1</p>
           </li>
           <li>
-            <i class="fas fa-box"></i>
-            <p>Work</p>
+            <i class="fas fa-caret-up"></i>
+            <p>Render 2</p>
           </li>
           <li>
-            <i class="fas fa-book-open"></i>
-            <p>Blog</p>
+            <i class="fas fa-caret-up"></i>
+            <p>Render 3</p>
           </li>
           <li>
-            <i class="fas fa-users"></i>
-            <p>About us</p>
+            <i class="fas fa-caret-up"></i>
+            <p>Render 4</p>
           </li>
         </ul>
       </nav>
